@@ -269,6 +269,9 @@ Changes since 2.0.7
     bitmapped options.
 97. modules/onig-module.c: New module that wraps the oniguruma regular
     expression library.
+98. src/slang.c: If a file defining a namespace was loaded, a
+    duplicate namespace error was getting generated when also loading
+    a byte-compiled version of the same file.
 
 {{{ Previous Versions
 
